[project]
name = "cristina-et-emilien-com"
version = "0.1.0"
description = "Wedding website backend scripts"
authors = [
    { name = "Émilien Tlapale", email = "emilien@tlapale.com" },
    { name = "Cristina Morariu", email = "kix2mix2@yahoo.com" }
]
dependencies = [
    "openai>=1.30.5",
    "boto3>=1.34.118",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cristina_et_emilien_com"]

[project.scripts]
chat = "cristina_et_emilien_com:main"
